--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Simple Accessibility</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" type="text/css" >
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="" type="text/css" />
     <link rel="icon" type="image/x-icon" href="favicon/favicon-48x48.png" >
 </head>
@@ -42,6 +42,8 @@
         </section>
     </main>
     
-    <script type="text/javascript" src="js/app.js" defer></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/theme.js"></script>
+    <script type="text/javascript" src="assets/js/language.js"></script>
 </body>
 </html>
