--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" type="text/css" >
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="" type="text/css" />
-    <link rel="icon" type="image/x-icon" href="favicon/favicon-48x48.png" >
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon-48x48.png" >
 </head>
 <body>
     <nav>
